- Added ability to activate skills or use items based on current active
  skills (such as blessed, agi upped, etc). This allows you to re-activate
  skills that have been deactivated without using timeouts.
  This is similar to modkore's _inStatus/_outStatus feature.
- Added ability to activate skills or use items based on current
  status ailments/looks (like poisoned, hidden, etc.)
- The Linux version now automatically compiles Tools.so for you if it
  doesn't exist.


New commands:
- warp list
  List warp portal maps.
- talk num (#number)
  Respond to an NPC with a number.
- plugin
  Control plugins. Type 'plugin help' for full usage description.


New configuration options:
- shop_random
  When set to 1, the item order in the shop will be randomized. The behavior
  in the previous releases was to always randomize shop item order, but now
  it's configurable.
- storageAuto_npc_type and storageAuto_npc_steps
  If storageAuto_npc_type is blank it will use the current steps (and
  display a warning)
  			     1 it will use the current steps (c r1 n)
  			     2 it will use the steps for the comodo npcs (c c r1 n)
  			     3 it will use the steps defined in autoStorage_npc_steps
  storageAuto_npc_steps is a (any number of) space(s) seperated list of
  commands to send while attempting to store.
  These commands consist of n which will send the cancel command
  			    c which will send the continue command
  			    r* which will send a responce where the responce number is *
  			    (NOTE responce numbering starts at 0 (unlike it does if you
  			    are using sendTalkResponse)) after training everyone to start
  			    counting at 0, i thaught it best to preserve it ;)
- secureLogin
  secureLogin_type
  secureLogin_account
  These options are used for secure logins.
- partySkill_#_*
  Used for party skills.
  See config.txt in the latest confpack.
- useSelf_skill_#_whenStatusActive
  useSelf_skill_#_whenStatusInactive
  useSelf_item_#_whenStatusActive