@@ -79,6 +79,7 @@ In each loop, the following things are performed:
 </li>
 <li>
 	<h4>Handle connection states</h4>
+	The function <a href="Network.html#Network::checkConnection"><code>checkConnection()</code></a> handles connection issues.
 	See <a href="Network.html"> the Network module</a> for more information.
 </li>
 <li>
